<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/myyellow"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_information"
        android:textAlignment="center"
        android:textColor="#000"
        android:textAllCaps="true"
        android:padding="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@drawable/welcome"
            android:id="@+id/member_img"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="true"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:textColor="#e44a4a"
                android:id="@+id/member_namme_id"
                android:text="@string/khokan"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textAllCaps="true"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:textColor="#e44a4a"
                android:id="@+id/member_registration_id"
                android:text="@string/_0000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textAllCaps="true"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:textColor="#e44a4a"
                android:id="@+id/member_contact_id"
                android:text="@string/_000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/batch"
                android:textAllCaps="true"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:textColor="#e44a4a"
                android:id="@+id/member_batch_id"
                android:text="@string/_28"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
