<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.khokan.datagelodataelo.AboutUs">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/about_us_icon"
        android:padding="5dp"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/myredOne"
            android:textAlignment="center"
            android:padding="10dp"
            android:shadowColor="@color/myredOne"
            android:background="@color/myyellow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abou_us"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developerbng"
            android:textAlignment="center"
            android:background="@color/myyellow"
            android:padding="10dp"
            android:textColor="@color/myredOne"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namebg"
            android:textAlignment="center"
            android:background="@color/myyellow"
            android:padding="10dp"
            android:textColor="@color/myredOne"
            />
    </LinearLayout>

</LinearLayout>
