<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.khokan.datagelodataelo.PlayMusic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/myyellow"
        >

        <TextView
            android:text="Music Palyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="35dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:src="@drawable/welcome"
            android:background="@color/myredOne"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textColor="@color/myblue"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Song Name"
                android:id="@+id/textView4"
                android:textColor="@color/myblue"
                android:textStyle="bold"
                android:layout_weight="1" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textColor="@color/myblue"
                android:textStyle="bold" />





        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:background="@drawable/button_selected"

        />


</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:id="@+id/button"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:id="@+id/button2"
                android:background="@drawable/button_selected"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/button3"
                android:background="@drawable/button_selected"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewind"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:background="@drawable/button_selected"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
